# libtrackerboy

./: .editorconfig  .eleventy.js  .eleventyignore  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  Gemfile  README.md  ROADMAP.md  _config.yml  build.nims  ci.py  ci_utils.py  config.nims  devdeps.nims  docgen.nims  index.md  libtrackerboy.nim  libtrackerboy.nimble  nut  nut.nims  package-lock.json  package.json  releases.md  tbc.nim  trackerboy.nimble
docs/: Gemfile  (+10 more)
examples/: CMakeLists.txt  demo.cpp  example_apu.cpp  example_instruments.cpp  example_song.cpp  runner.cpp
src/: CMakeLists.txt  InstrumentPreview.cpp  Synth.cpp  Version.cpp  note.cpp  trackerboy.nim
src/_data/: eleventyComputed.js  seo.json
src/_data/releasesByTag/: v0_7_0.json  v0_7_1.json  v0_7_2.json  v0_8_0.json  v0_8_1.json  v0_8_2.json  v0_8_3.json  v0_9_0.json  v0_9_1.json
src/_includes/: version-table.njk
src/_includes/layouts/: default.njk  release.njk
src/apu/: Apu.cpp  DefaultApu.cpp  IApu.cpp  NullApu.cpp
src/compiler/: PatternRun.cpp
src/data/: Instrument.cpp  Module.cpp  Named.cpp  Pattern.cpp  Sequence.cpp  Song.cpp  Table.cpp  Track.cpp  TrackRow.cpp  Waveform.cpp
src/docs/develop/: libtrackerboy.html  module-file-format-spec.html  piece-file-format-spec.html  tbm-spec-major-0.html  tbm-spec-major-1.html  tbm-spec-major-2.html  theindex.html
src/docs/develop/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  ir.html  notes.html  text.html  tracking.html  version.html
src/docs/develop/libtrackerboy/engine/: apucontrol.html  enginecontrol.html  enginestate.html  frequency.html
src/docs/develop/libtrackerboy/exports/: wav.html
src/docs/develop/libtrackerboy/private/: apucontrol.html  data.html  destroy2.html  endian.html  enginecontrol.html  enginestate.html  hardware.html  ioblocks.html  optionutils.html  player.html  ptrarith.html  synth.html  utils.html  wavwriter.html
src/docs/v0.7.0/: libtrackerboy.html  module-file-format-spec.html  piece-file-format-spec.html  theindex.html
src/docs/v0.7.0/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  notes.html  version.html
src/docs/v0.7.0/libtrackerboy/private/: apucontrol.html  data.html  endian.html  enginecontrol.html  enginestate.html  hardware.html  ioblocks.html  ptrarith.html  synth.html  utils.html
src/docs/v0.7.1/: libtrackerboy.html  module-file-format-spec.html  piece-file-format-spec.html  theindex.html
src/docs/v0.7.1/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  notes.html  version.html
src/docs/v0.7.1/libtrackerboy/private/: apucontrol.html  data.html  endian.html  enginecontrol.html  enginestate.html  hardware.html  ioblocks.html  ptrarith.html  synth.html  utils.html
src/docs/v0.7.2/: libtrackerboy.html  module-file-format-spec.html  piece-file-format-spec.html  theindex.html
src/docs/v0.7.2/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  ir.html  notes.html  version.html
src/docs/v0.8.0/: libtrackerboy.html  module-file-format-spec.html  tbm-spec-major-0.html  tbm-spec-major-1.html  tbm-spec-major-2.html  theindex.html
src/docs/v0.8.0/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  ir.html  notes.html  version.html
src/docs/v0.8.1/: libtrackerboy.html  module-file-format-spec.html  tbm-spec-major-0.html  tbm-spec-major-1.html  tbm-spec-major-2.html  theindex.html
src/docs/v0.8.1/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  ir.html  notes.html  version.html
src/docs/v0.8.2/: libtrackerboy.html  module-file-format-spec.html  tbm-spec-major-0.html  tbm-spec-major-1.html  tbm-spec-major-2.html  theindex.html
src/docs/v0.8.2/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  ir.html  notes.html  version.html
src/docs/v0.8.3/: libtrackerboy.html  module-file-format-spec.html  tbm-spec-major-0.html  tbm-spec-major-1.html  tbm-spec-major-2.html  theindex.html
src/docs/v0.8.3/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  ir.html  notes.html  version.html
src/docs/v0.9.0/: libtrackerboy.html  module-file-format-spec.html  tbm-spec-major-0.html  tbm-spec-major-1.html  tbm-spec-major-2.html  theindex.html
src/docs/v0.9.0/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  ir.html  notes.html  text.html  tracking.html  version.html
src/docs/v0.9.1/: libtrackerboy.html  module-file-format-spec.html  tbm-spec-major-0.html  tbm-spec-major-1.html  tbm-spec-major-2.html  theindex.html
src/docs/v0.9.1/libtrackerboy/: apu.html  apuio.html  common.html  data.html  editing.html  engine.html  io.html  ir.html  notes.html  text.html  tracking.html  version.html
src/engine/: ChannelControl.cpp  Engine.cpp  FrequencyControl.cpp  IApu.cpp  MusicRuntime.cpp  Operation.cpp  RuntimeContext.cpp  TrackControl.cpp
src/internal/: apu.cpp  apu.hpp
src/internal/fileformat/: fileformat.hpp
src/internal/fileformat/payload/: deserializePayload0.cpp  payload.cpp  payload.hpp
src/misc/: logo.aseprite
src/pages/: 404.html  index.njk  pages.11tydata.json
src/pages/docRedirects/: develop.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.8.3.md  v0.9.0.md  v0.9.1.md
src/pages/releases/: releases-page.md  releases.njk
src/sass/: style.sass
src/trackerboy/: apu.nim  apuio.nim  common.nim  data.nim  editing.nim  engine.nim  io.nim  notes.nim  synth.nim  version.nim
src/trackerboy/private/: apucontrol.nim  data.nim  endian.nim  enginecontrol.nim  hardware.nim  ioblocks.nim  ptrarith.nim  synth.nim  wavwriter.nim
test/: CMakeLists.txt
test/data/: test_Module.cpp  test_PatternMap.cpp  test_Table.cpp
test/engine/: test_InstrumentRuntime.cpp  test_Timer.cpp
test/internal/: test_endian.cpp
test/internal/fileformat/: test_Block.cpp
(+409 files in other folders)
